--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,8 +14,14 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    
+    - name: Set up Docker Buildx
+      id: buildx
+      uses: docker/setup-buildx-action@v1
+      
     - name: Build the Docker image
       run: docker build . -t dechertnicholas/space-engineers-ds-windows:latest
+      
     - name: Docker Login
       uses: docker/login-action@v1.12.0
       with:
