--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,10 +14,6 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    
-    - name: Set up Docker Buildx
-      id: buildx
-      uses: docker/setup-buildx-action@v1
       
     - name: Build the Docker image
       run: docker build . -t dechertnicholas/space-engineers-ds-windows:latest
@@ -28,9 +24,5 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_TOKEN }}
     
-    - name: Build and push Docker images
-      uses: docker/build-push-action@v2.10.0
-      with:
-        context: .
-        tags: dechertnicholas/space-engineers-ds-windows:latest
-        push: true
+    - name: Publish the Docker image
+      run: docker push dechertnicholas/space-engineers-ds-windows:latest
