--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -38,7 +38,7 @@ jobs:
     - uses: actions/checkout@v3
       
     - name: Build the Docker image
-      run: \Build.ps1 -LTSC 2019
+      run: .\Build.ps1 -LTSC 2019
     
     - name: Docker Login
       if: github.ref == 'refs/heads/main'
