--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,6 +7,9 @@ on:
       - '!README.md'
       - '!docker-compose.yml'
   pull_request:
+    types:
+    - opened
+    - closed
     branches: [ main ]
 
 jobs:
@@ -21,14 +24,14 @@ jobs:
       run: .\Build.ps1 -LTSC 2022
     
     - name: Docker Login
-      if: github.ref == 'refs/heads/main'
+      if: github.ref == 'refs/heads/main' && github.event.pull_request.merged == true
       uses: docker/login-action@v1.12.0
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_TOKEN }}
 
     - name: Publish the Docker image
-      if: github.ref == 'refs/heads/main'
+      if: github.ref == 'refs/heads/main' && github.event.pull_request.merged == true
       run: docker push dechertnicholas/space-engineers-ds-windows:ltsc2022
 
   build2019:
@@ -41,12 +44,12 @@ jobs:
       run: .\Build.ps1 -LTSC 2019
     
     - name: Docker Login
-      if: github.ref == 'refs/heads/main'
+      if: github.ref == 'refs/heads/main' && github.event.pull_request.merged == true
       uses: docker/login-action@v1.12.0
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_TOKEN }}
 
     - name: Publish the Docker image
-      if: github.ref == 'refs/heads/main'
+      if: github.ref == 'refs/heads/main' && github.event.pull_request.merged == true
       run: docker push dechertnicholas/space-engineers-ds-windows:ltsc2019
