Update exclusion files for pull requests

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,6 +7,9 @@ on:
       - '!README.md'
       - '!docker-compose.yml'
   pull_request:
+    paths:
+      - '!README.md'
+      - '!docker-compose.yml'
     types:
     - opened
     - closed
